--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -53,15 +53,17 @@
         justify-content: center;
         h3{
           padding-bottom: 5px;
+          padding-left: 5px;
+          padding-right: 5px;
           color: black;
           text-align: center;
           font-weight: 500;
+          font-size: medium;
         }
         h5{
           margin: 0px;
-          //padding: 0px 0px 30px 0px;
           font-weight: 300;
-          font-size: 18px;
+          font-size: medium;
           width: 90%;
           margin: auto;
         }
@@ -78,7 +80,7 @@
 }
 
 @media screen and (max-width: 1700px){
-  .team-grid-container{
+  .team-grid-container {
     grid-template-columns: repeat(4, 1fr) !important;
   }
 }
@@ -89,18 +91,20 @@
   }
 }
 
-
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 600px){
   .team-grid-container{
     grid-template-columns: repeat(2, 1fr) !important;
     .team-member{
-      height: 200px;
+      height: 200px !important;
+      &__text{
+        min-height: 50px !important;
+        h3{
+          font-size: x-small !important;
+        }
+        h5{
+          font-size: xx-small !important;
+        }
+      }
     }
-  }
-}
-
-@media screen and (max-width: 600px){
-  .team-grid-container{
-    grid-template-columns: 2fr !important;
   }
 }
