--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -39,9 +39,13 @@
       display: flex;
       flex-direction: column;
       height: 400px;
-      &__picture{
+      &__picture_container {
         width: 100%;
         height: 75%;
+      }
+      &__picture{
+        width: 100%;
+        height: 100%;
         object-fit: cover;
       }
       &__text{
