--- a/_sass/event-info.scss
+++ b/_sass/event-info.scss
@@ -385,3 +385,133 @@ body{
 .featherlight-content{
   font-family: 'ingra', sans-serif;
 }
+#team{
+  text-align: left;
+  .team-container{
+    padding: 5% 5%;
+    &__header{
+      h2{
+        font-weight: 500;
+        font-size: xx-large;
+        letter-spacing:2px;
+        color: white;
+        text-transform: uppercase;
+      }
+      h3{
+        font-weight: 300;
+        font-size: large;
+        padding-bottom: 50px;
+        color: white;
+      }
+      hr{
+        border: none;
+        height: 2px;
+        background-color: white;
+        margin: 15px 0px 25px 0px;
+
+      }
+    }
+  }
+  .team-grid-container{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    .team-member{
+      text-align: center;
+      background-color: white;
+      margin: 10px;
+      display: flex;
+      flex-direction: column;
+      height: 400px;
+      &__picture_container {
+        width: 100%;
+        height: 75%;
+      }
+      &__picture{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      &__text{
+        min-height: 100px;
+        line-height: inherit;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        h3{
+          padding-left: 5px;
+          padding-right: 5px;
+          padding-top: 5px;
+          color: black;
+          text-align: center;
+          font-weight: 500;
+          font-size: large;
+        }
+        h4 {
+            font-weight: 400;
+            font-size: medium;
+            padding: 8px;
+        }
+        h5{
+          margin: 0px;
+          font-weight: 300;
+          font-size: medium;
+          width: 90%;
+          margin: auto;
+        }
+      }
+    }
+  }
+  #team-slit-bottom{
+    width: 100%;
+    height: 103px;
+    background-color: #1f1f1f;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 66%);
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 66%);
+  }
+}
+
+@media screen and (max-width: 1700px){
+  .team-grid-container {
+    grid-template-columns: repeat(4, 1fr) !important;
+  }
+}
+
+@media screen and (max-width: 1500px){
+  .team-grid-container{
+      grid-template-columns: repeat(3, 1fr) !important;
+  }
+}
+
+@media screen and (max-width: 600px){
+  .team-container{
+    &__header{
+      h2{
+        font-size: x-large !important;
+      }
+      h3{
+        font-size: medium !important;
+        letter-spacing: 0px !important;
+        padding-bottom: 15px !important;
+      }
+    }
+  }
+  .team-grid-container{
+    grid-template-columns: repeat(2, 1fr) !important;
+    .team-member{
+      height: 200px !important;
+      &__text{
+        min-height: 50px !important;
+        h3{
+          font-size: x-small !important;
+        }
+        h4 {
+          font-size: x-small !important;
+        }
+        h5{
+          font-size: xx-small !important;
+        }
+      }
+    }
+  }
+}
