--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -150,6 +150,10 @@
       margin-right: 20px;
       margin-top: 20px;
     }
+    #email-button{
+      margin-right: 20px;
+      margin-top: 20px;
+    }
   }
   .social-links-header{
     position: absolute;
